src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>ABB_Location__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Location lookup added as part of R5-2343.</description>
        <inlineHelpText>Refers to the Manufacturing, Service or Project Execution unit (Business Activity Location - BAL) that will manufacture products and/or provide services either for installed products and systems or order related system integration including project mgmt.</inlineHelpText>
        <label>ABB Location - Source Location</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND 6 AND 3 AND 7 AND 4 AND 5 AND 8 AND 9</booleanFilter>
            <filterItems>
                <field>$Source.Product_Group__c</field>
                <operation>equals</operation>
                <valueField>ABB_Location__c.Product_Group_Number__c</valueField>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.BU__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.DIV__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.Deleted__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.Data_Load_Year__c</field>
                <operation>notEqual</operation>
                <value>2015</value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.BU__c</field>
                <operation>notEqual</operation>
                <value>ZCCO, ZCRE, ZCVA</value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.DIV__c</field>
                <operation>notEqual</operation>
                <value>ZC</value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.Activity__c</field>
                <operation>notEqual</operation>
                <value>Admin/Corporate, Other, R&amp;D, Warehouse or Logistics, Training</value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.Activity__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ABB_Location__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Local_Product__c</fullName>
        <formula>IF(PricebookEntry.Product2.RecordType.Name=&apos;Local Products&apos; || PricebookEntry.Product2.RecordType.Name=&apos;Local Hierarchy&apos;,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Local Product?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CPQ_Quotation_Number__c</fullName>
        <description>To be filled in upon creation of a quote; can be common for all scope line items in case the quote is created for the opportunity or the quotation number can be on a scope line item basis if a quote is created for a scope line item.</description>
        <label>CPQ Quotation Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Values coming from SevIS</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ICV_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ICV Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please ensure that an Account of Type &quot;ABB ICV&quot; is selected.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>ABB ICV</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Transfer_Price__c</fullName>
        <description>Contains the price for the internal transfer.</description>
        <label>Internal Transfer Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <description>R5</description>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <formula>Opportunity.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <formula>Opportunity.Opportunity_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Source__c</fullName>
        <description>ServIS Integration</description>
        <label>Opportunity Source</label>
        <picklist>
            <picklistValues>
                <fullName>ServIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ServISPLAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offline tool</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Product_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R3v1 - Define primary product group for respective opportunity, if it is selected current product group will be mapped to respective opportunity&apos;s PG</description>
        <label>Primary Product Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <description>Opportunity Line Item Probabiltiy - %</description>
        <label>Probability</label>
        <picklist>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <description>R3v1- Captures Product Group</description>
        <label>Product Group</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Type_Code__c</fullName>
        <description>Contains unique product codes.</description>
        <externalId>true</externalId>
        <label>Product Type Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Business_Unit__c</fullName>
        <formula>PricebookEntry.Product2.Related_Product_Group__r.Business_Unit__c</formula>
        <label>Related Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Division__c</fullName>
        <formula>PricebookEntry.Product2.Related_Product_Group__r.Division__c</formula>
        <label>Related Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <description>This field will be populated when an Opportunity is created from ServIS</description>
        <label>Serial Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServIS_Creator_Email__c</fullName>
        <label>ServIS Creator Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ServIS_Opp_Id__c</fullName>
        <label>ServIS Opp Id</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ServIS_Response_Feedback__c</fullName>
        <label>ServIS Response Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Site_Id__c</fullName>
        <description>This field will be populated when an Opportunity is created from ServIS</description>
        <label>Site Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Name__c</fullName>
        <description>This Field will be populated when an opportunity is created from ServIS</description>
        <label>Site Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Internal_Transfer_Price__c</fullName>
        <description>Calculates the total value of the internal transfer price.</description>
        <formula>Quantity *  Internal_Transfer_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Internal Transfer Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>R5 Integration</description>
        <label>Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <validationRules>
        <fullName>Primary_Product_Selection_Check</fullName>
        <active>true</active>
        <description>R4.2 Local products. Primary Product Group should not be TRUE If Is Local Product? is TRUE</description>
        <errorConditionFormula>IF($Profile.Name =$Label.Label_Sales_Standard_Profile_Name, AND(APTS_Is_Local_Product__c = TRUE, Primary_Product_Group__c = TRUE),FALSE)</errorConditionFormula>
        <errorMessage>Primary Product Selection is only for Global Products.</errorMessage>
    </validationRules>
</CustomObject>